# electrolux-remote

./: Cargo.toml  README.md
.cargo/: config.toml
crates/electrolux-ir/: Cargo.toml
crates/electrolux-ir/src/: lib.rs
src/: ir.rs  main.rs
