[package]
name = "electrolux-remote"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "electrolux-remote"
path = "src/main.rs"

[workspace]
members = ["crates/electrolux-ir"]

[dependencies]
# --- PaperUI framework (separate repo, github.com/iac26/PaperUI) ---
paperui     = { git = "https://github.com/iac26/PaperUI", features = ["eg", "reactive"] }
paperui-tft = { git = "https://github.com/iac26/PaperUI" }

# --- App-local: the Electrolux AC IR protocol ---
electrolux-ir = { path = "crates/electrolux-ir" }

# --- ESP32 device deps ---
esp-hal = { version = "1.1", features = ["esp32", "unstable"] }
esp-backtrace = { version = "0.17", features = ["esp32", "panic-handler", "println"] }
esp-println = { version = "0.15", features = ["esp32"] }
embedded-graphics = "0.8"
mipidsi = "0.9"
embedded-hal-bus = "0.3"
embedded-hal = "1.0"
heapless = "0.8"
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32"] }

[profile.release]
opt-level = "s"
lto = "fat"
